<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="comic_reminder2">充值规则说明：\n1. 用户充值任一档次的会员后可享受该档次对应的全站免费看书的权限。
        \n2. 用户开通会员的生效时间是由支付成功时间至充值档位对应的时间之中。
        \n3. 用户开通会员前若有金币留存，开通任意VIP会员后看书不会再消耗留存的金币，直至对应充值档位会员有效期失效为止。
        \n4. 会员的有效时间可以叠加，若用户在购买68会员之后可再次购
买188会员或365会员，会员的有效时间为第一次购买会员对应时间+第二次购买会员对应时间。会员可重复购买，无上限限制。
    \n5. 用户开通任意会员后，仍然可以进行普通充值的购买，购买后
账户金币增加同档位对应的金币，但是在书城内阅读不会进行金
币消耗，直至会员失效为止。</string>
    <string name="comic_reminder1">充值规则说明：
    \n1. 1元=100书币
        \n2. 书币充值可叠加，无上限。
\n3. 书币消耗完无法阅读书籍。
\n4. 书币留存小于小说单章的消耗数时无法阅读书籍。
        \n5. vip用户阅读书籍不会消耗书币。
</string>
    <string name="comic_reminder_new" tools:ignore="ExtraTranslation">温馨提示：\n1. 人民币与金币的汇率为1元=100金币。\n2. 金币为此平台的虚拟货币 , 一经交易则无法进行退款处理,无论是点错或者非本人充值,均无法进行退款处理，请知悉。\n3. 充值可能会有延迟,请耐心等待,若充值出现问题,请及时联系客服(个人中心-联系客服),我们将会为您解决。\n4. 十六周岁以下的未成年人在本平台进行任何的活动应事先取得家长或其法定监护人同意,还请自觉遵守\n5:若充值出现问题，请及时联系客服(QQ)</string>
    <string name="comic_pay_remind">1、请在微信内完成支付，支付成功页面自动跳转\n2、如果您未支付，请点击“去支付”完成支付\n3、如果您未安装微信6.0.2版本及以上版本客户端，请先安装并登陆微信完成支付</string>
    <string name="comic_str1">1、使用微博、QQ、或微信登录的用户,建议绑定手机号,来增加账户的安全性。</string>
    <string name="comic_str2">2、绑定手机号仅用于安全验证,不作为登录账号使用。</string>
    <string name="comic_str3">3、若您已经使用手机号登录过,也可以将目前登录的账号绑定之前的手机号。</string>
    <string name="comic_bookshelf_record_format">阅读到第%1$d章</string>
    <string name="comic_num_top">%1$d豪气值</string>
    <string name="comic_yuan">%1$d元</string>
    <string name="comic_yuan_f">%1$.2f元</string>
    <string name="comic_coin">金币</string>
    <string name="comic_send_coin">送%1$d元</string>
    <string name="comic_pay_message">充%1$d送%2$d</string>
    <string name="comic_pay_message_new">充%1$d</string>
    <string name="comic_pay_present">送%1$d</string>
    <string name="comic_user_amount">金币余额：%1$d</string>
    <string name="comic_user_comment_source">来源漫画：%1$s</string>
    <string name="comic_unkown">未知</string>
    <string name="comic_null">null</string>
    <string name="comic_search_remind">请输入关键字再进行搜索</string>
    <string name="comic_done">已完成</string>
    <string name="comic_receive_welfare">领取福利</string>
    <string name="comic_welfare_count">(金币+%1$d)</string>
    <string name="comic_receive">领取</string>
    <string name="comic_go_done">去完成</string>
    <string name="comic_hot">热度%1$d万</string>
    <string name="comic_update_sub">更新至第%1$s话</string>
    <string name="comic_update_sub_new">更新至第%1$d话</string>
    <string name="comic_update">连载-更新至第%1$s话</string>
    <string name="comic_reward_coin">打赏 %1$d</string>
    <string name="comic_success">SUCCESS</string>
    <string name="comic_enc">utf-8</string>
    <string name="comic_emoji_remind">不支持输入表情</string>
    <string name="comic_cnennum_remind">只能输入汉字,英文，数字</string>
    <string name="comic_install_apk">application/vnd.android.package-archive</string>
    <string name="comic_crop_image_intent">com.android.camera.action.CROP</string>
    <string name="comic_open_image_type">image/*</string>
    <string name="comic_circle_view_remind">ScaleType %1$s not supported.</string>
    <string name="comic_agree_ment">同意本协议</string>
    <string name="comic_subscribe_fail">订阅失败</string>
    <string name="comic_subscribe_success">订阅成功</string>
    <string name="comic_not_install_wx">请安装微信客户端后分享</string>
    <string name="comic_report_success">发表成功</string>
    <string name="comic_day_model">日间</string>
    <string name="comic_night_model">夜间</string>
    <string name="comic_front_no_more">前面没有了</string>
    <string name="comic_behind_no_more">后面没有了</string>
    <string name="comic_check_connect">请检查网络后重试</string>
    <string name="comic_collect_fail">收藏失败，请重试！</string>
    <string name="comic_report_fail">发表失败，请重试！</string>
    <string name="comic_share_title">《%1$s》这款漫画真的超级棒，好看到爆炸哦！！！</string>
    <string name="comic_share_url"><![CDATA[http://share.%1$s/index.html?id=%2$d&cid=%3$s&sign=%4$s]]></string>
    <string name="comic_collect_text">收藏</string>
    <string name="comic_history">历史</string>
    <string name="comic_book_coin">书币</string>
    <string name="comic_book_vip">会员</string>
    <string name="comic_confirm_delete">确定从书架中移除《%1$s》吗？</string>
    <string name="comic_no_more_data">没有更多数据了</string>
    <string name="comic_go_read">去阅读</string>
    <string name="comic_no_history">无阅读历史记录</string>
    <string name="comic_delete_comic">确定从书架中移除所选书籍吗？</string>
    <string name="comic_delete_comic_from_history">确定从历史记录中移除所选书籍吗？</string>
    <string name="comic_desc">倒序</string>
    <string name="comic_asc">正序</string>
    <string name="comic_update_text">更新</string>
    <string name="comic_comic_desc">作品简介：</string>
    <string name="comic_go_more_comments">查看更多评论</string>
    <string name="comic_content_not_allow_null">内容不能为空！</string>
    <string name="comic_unknown_exception">未知异常！</string>
    <string name="comic_comment_not_allow_null">评论内容不能为空</string>
    <string name="comic_request_fail">请求失败，请重试</string>
    <string name="comic_reward_success">打赏成功！</string>
    <string name="comic_platform">android</string>
    <string name="comic_window_null">window is null,please check it</string>
    <string name="comic_share_dialog_title">发现一个漫画超棒的APP，新用户还可以免费领取金币哦...</string>
    <string name="comic_comic_share_dialog_content">快点我上车啦~</string>
    <string name="comic_copy_success">复制成功，可以发给朋友们了。</string>
    <string name="comic_share_dialog_url"><![CDATA[http://normal.%1$s/?uid=%2$s&cid=%3$s&sign=%4$s]]></string>
    <string name="comic_share_dialog_default_img">http://static.biedese.cn/image2/user/manhua/3302/1da9174e-8799-477f-aaa1-527e25be08961550815062184.png</string>
    <string name="comic_tip_success">举报成功！</string>
    <string name="comic_code_success">验证码获取成功</string>
    <string name="comic_code_fail">验证码获取失败</string>
    <string name="comic_code_again">重发验证码 %1$ss</string>
    <string name="comic_get_code">获取验证码</string>
    <string name="comic_agree_ment_remind">请同意漫画服务协议</string>
    <string name="comic_phone_remind">请输入正确的手机号</string>
    <string name="comic_code_remind">请输入6位验证码</string>
    <string name="comic_login_success">login success</string>
    <string name="comic_not_install_qq">您还未安装QQ客户端</string>
    <string name="comic_qq_login_cancel">qq login cancel</string>
    <string name="comic_wb_login_cancel">weibo login cancel</string>
    <string name="comic_wb_login_fail_msg">授权失败 Obtained the code:</string>
    <string name="comic_login_not_install_wx">您还未安装微信客户端</string>
    <string name="comic_agreement_check_text">同意《金桔小说服务协议》</string>
    <string name="comic_login_tab_text">登录 / 注册</string>
    <string name="comic_wx_login_cancel">wx login cancel</string>
    <string name="comic_wx_login_denied">AUTH_DENIED</string>
    <string name="comic_response_msg">操作成功</string>
    <string name="comic_response_msg_fail">操作失败</string>
    <string name="comic_zfb_pay_state">resultStatus</string>
    <string name="comic_wx_pay_fail">微信支付失败,请稍后再试</string>
    <string name="comic_pay_fail">支付失败</string>
    <string name="comic_connection_error">网络连接错误</string>
    <string name="comic_pay_cancel">您取消了支付</string>
    <string name="comic_pay_success">支付成功</string>
    <string name="comic_pay_dealing">正在处理中，请稍后刷新查看结果</string>
    <string name="comic_pay_too_fast">太快啦，请稍后再支付~</string>
    <string name="comic_recharge_record_text">充值记录</string>
    <string name="comic_pay_record_text">消费记录</string>
    <string name="comic_pay_record_remind_title">提示</string>
    <string name="comic_pay_record_remind_msg">当前消费仅显示阅读漫画消费记录</string>
    <string name="comic_phone_code_error_remind">手机号或者验证码不合法!</string>
    <string name="comic_coupon_code_error_remind">非法兑换码!</string>
    <string name="comic_bind_phone_error_remind">绑定失败，检查手机号后重试</string>
    <string name="comic_exchange_error_remind">兑换失败。请稍后重试！</string>
    <string name="comic_update_app_msg">当前已经是最新版本!</string>
    <string name="comic_get_agreement_fail">协议加载失败，请联系客服获取!</string>
    <string name="comic_agreement_text">协议</string>
    <string name="comic_download_progress_format">%1$.1fM/%2$.1fM</string>
    <string name="comic_update_fail">更新失败</string>
    <string name="comic_download_fail">下载失败</string>
    <string name="comic_not_login_state">未登录</string>
    <string name="comic_logout">退出登录</string>
    <string name="comic_coupon_code_not_login_remind">请登陆后再使用兑换码！</string>
    <string name="comic_bind_phone_not_login_remind">请登陆后再绑定手机号！</string>
    <string name="comic_no_signature">木有简介，可能在世界角落游荡</string>
    <string name="comic_no_sex">就不告诉你</string>
    <string name="comic_sex_women">女</string>
    <string name="comic_sex_man">男</string>
    <string name="comic_select_text">请选择</string>
    <string name="comic_china">中国</string>
    <string name="comic_nickname_not_null">昵称不能为空!</string>
    <string name="comic_nickname_limit_remind">昵称最大15个字符!</string>
    <string name="comic_sign_limit_remind">签名最大30个字符!</string>
    <string name="comic_comments_text">发表过的评论</string>
    <string name="comic_app_raise_text">点赞过的漫画</string>
    <string name="comic_area_select">城市选择</string>
    <string name="comic_upload_head_img_fail_remind">头像更新失败</string>
    <string name="comic_sex_select">性别选择</string>
    <string name="comic_user_info_update_success_remind">更新成功!</string>
    <string name="comic_user_info_update_fail_remind">服务异常，更新失败了!</string>
    <string name="comic_delete_remind_title">删除评论</string>
    <string name="comic_delete_remind_msg">您确定要删除这条评论吗？删除之后就不再显示了。</string>
    <string name="comic_delete_success_remind">删除成功</string>
    <string name="comic_feedback_limit_remind">最大提交500个字符！</string>
    <string name="comic_report_feedback_success_dialog_msg">提交成功,点击确定退出本页面!</string>
    <string name="comic_feedback_hint">想说啥你就说点啥~~~</string>
    <string name="comic_catalog_text">目录</string>
    <string name="comic_about_us">关于我们</string>
    <string name="comic_introduction1">超多漫画免费看，你想看的全都有！</string>
    <string name="comic_introduction2">天天更新超快速，追更漫画零等待！</string>
    <string name="comic_introduction3">超多福利等你拿，种类齐全任你挑！</string>
    <string name="comic_app_features">新版特性:</string>
    <string name="comic_bind_phone_text">绑定手机</string>
    <string name="comic_coupon_text">兑换码</string>
    <string name="comic_input_coupon_code">请输入兑换码吧</string>
    <string name="comic_exchange_text">兑换</string>
    <string name="comic_exchange_get_coins_text">兑换成功可以获得金币哦~！</string>
    <string name="comic_remind_text">温馨提示:</string>
    <string name="comic_coupon_remind1">1.多注意站内活动将有机会获得更多兑换码~</string>
    <string name="comic_coupon_remind2">2.如果兑换码兑换不成功可联系我们的客服</string>
    <string name="comic_setting_text">设置</string>
    <string name="comic_read_with_mobile_remind">流量阅读提醒</string>
    <string name="comic_read_with_mobile_hint">使用流量阅读漫画时会收到提醒</string>
    <string name="comic_delete_comment_no_remind">评论删除不提醒</string>
    <string name="comic_delete_comment_no_remind_hint">个人中心删除评论会弹窗提醒</string>
    <string name="comic_coupon_text_hint">用于兑换活动发放的金币兑换码</string>
    <string name="comic_receive_propelling_notification">接受推送通知</string>
    <string name="comic_receive_propelling_notification_hint">作品更新及时通知</string>
    <string name="comic_turn_page_with_volume">使用音量键翻页</string>
    <string name="comic_about_app">关于金桔小说</string>
    <string name="comic_check_update">检查版本更新</string>
    <string name="comic_logout_text">退出登录</string>
    <string name="comic_collection_success_msg">收藏成功，已添加到书架~</string>
    <string name="comic_comment_text">评论</string>
    <string name="comic_app_features1">超可爱猫爪娘上线啦~可调戏哟!!!</string>
    <string name="comic_app_features2">1、任务优化啦，做任务什么的超级爽的!</string>
    <string name="comic_app_features3">2、新增弹窗福利啦~记得常来看看哦，说不定下一个被砸中的就是你啦~</string>
    <string name="comic_user_info_head_img">我的头像</string>
    <string name="comic_user_info_nickname">昵称</string>
    <string name="comic_user_info_sex">性别</string>
    <string name="comic_user_info_iphone">手机号</string>
    <string name="comic_user_info_title">个人信息</string>
    <string name="comic_user_info_setting">设置</string>
</resources>