<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jj.comics.widget.comic.toolbar.ComicToolBar
        android:id="@+id/bind_phone_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/comic_coupon_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:src="@drawable/img_comic_mine_setting_coupon" />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_45"
            android:background="@drawable/comic_edittext_bg"
            android:gravity="center"
            android:hint="@string/comic_input_coupon_code"
            android:textColorHint="@color/comic_999999" />


        <TextView
            android:id="@+id/coupon_redeem"
            android:layout_width="@dimen/dp_300"
            android:layout_height="@dimen/dp_45"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/comic_coupon_shape_tv_bg"
            android:gravity="center"
            android:text="@string/comic_exchange_text"
            android:textColor="@color/comic_ffffff"
            android:textSize="@dimen/dp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/comic_exchange_get_coins_text"
            android:textColor="@color/comic_999999" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:orientation="vertical"
        android:paddingLeft="@dimen/comic_36">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comic_remind_text"
            android:textColor="@color/base_333333"
            android:textSize="@dimen/dp_16" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/comic_coupon_remind1"
            android:textColor="@color/comic_666666"
            android:textSize="@dimen/dp_12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/comic_coupon_remind2"
            android:textColor="@color/comic_666666"
            android:textSize="@dimen/dp_12" />

    </LinearLayout>

</LinearLayout>