<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comic_read_bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:gravity="bottom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/collectionSuccView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_40"
        android:background="@drawable/img_comic_read_collection_success_view"
        android:gravity="center"
        android:text="@string/comic_collection_success_msg"
        android:textColor="@color/comic_ffffff"
        android:textSize="@dimen/dp_14"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:background="@color/comic_read_bar_bg"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/comic_read_catalog"
            style="@style/comic_bottom_container">

            <ImageView
                style="@style/comic_bottom_icon"
                android:src="@drawable/icon_comic_read_catalog_icon" />

            <TextView
                style="@style/comic_bottom_text"
                android:text="@string/comic_catalog_text"
                android:textSize="@dimen/dp_14" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/comic_read_collection"
            style="@style/comic_bottom_container">

            <ImageView
                android:id="@+id/comic_read_collection_icon"
                style="@style/comic_bottom_icon"
                android:src="@drawable/icon_comic_read_bottombar_uncollection" />

            <TextView
                style="@style/comic_bottom_text"
                android:text="@string/comic_collect_text"
                android:textSize="@dimen/dp_14" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/comic_read_comment"
            style="@style/comic_bottom_container">

            <ImageView
                style="@style/comic_bottom_icon"
                android:src="@drawable/img_comic_read_icon_comment" />

            <TextView
                style="@style/comic_bottom_text"
                android:text="@string/comic_comment_text"
                android:textSize="@dimen/dp_14" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/comic_read_nightMode"
            style="@style/comic_bottom_container">

            <ImageView
                android:id="@+id/comic_read_mode_icon"
                style="@style/comic_bottom_icon"
                android:src="@drawable/icon_comic_read_bottombar_night" />

            <TextView
                android:id="@+id/comic_read_mode_text"
                style="@style/comic_bottom_text"
                android:text="@string/comic_night_model"
                android:textSize="@dimen/dp_14" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>